Fixes overflow; Only hard resets when re-clicking on notification tab

--- a/src/popup/popup.pcss
+++ b/src/popup/popup.pcss
@@ -4,6 +4,7 @@ html {
 }
 
 body, #app {
-  width: 100%;
-  height: 100%;
+  width: 380px;
+  height: 600px;
+  overflow: hidden;
 }
